# shared-pie

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: library-check.yaml
src/shared_pie/: __init__.py  numbers.py
tests/: test_import.py
